Resolving responsive issues on smallest screens

--- a/src/components/mapbox/modal/modal.module.css
+++ b/src/components/mapbox/modal/modal.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   max-width: 100rem;
+  max-height: 90rem;
   width: 50%;
   top: 50%;
   left: 50%;
@@ -19,7 +20,7 @@
 }
 
 .modal-close-icon {
-  color: #fff;
+  color: var(--light-text-color);
   cursor: pointer;
 }
 
@@ -30,10 +31,11 @@
 }
 
 .modal-heading {
-  color: #fff;
+  color: var(--light-text-color);
   font-family: "Comfortaa";
   font-weight: 500;
   font-size: var(--heading-three);
+  line-height: 1.2;
 }
 
 .image-container {
@@ -50,6 +52,13 @@
   max-width: 80%;
 }
 
+.modal-paragraph {
+  font-family: "Comfortaa";
+  color: var(--light-text-color);
+  font-size: var(--paragraph-size-sm);
+  overflow: hidden;
+}
+
 @media screen and (max-width: 140rem) {
   .modal {
     width: 90%;
@@ -61,13 +70,32 @@
 }
 
 @media screen and (max-width: 50rem) {
+  .modal {
+    max-height: 60rem;
+    top: 40%;
+  }
+
   .text-container {
     gap: 3rem;
     padding: 4rem;
   }
 
+  .modal-paragraph {
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
+
   .close-btn-container {
     top: 2%;
     right: 4%;
+  }
+}
+
+@media screen and (max-width: 35rem) {
+  .text-container {
+    gap: 2rem;
+    padding: 2rem;
   }
 }
